syntax = "proto3";

package grpc;

option go_package = "internal/grpc";


service Shortener {
  rpc ShortURL(ShortURLRequest) returns(ShortURLResponse);
  rpc Ping(PingRequest) returns(PingResponse);
  rpc ShortURLBatch(ShortURLBatchRequest) returns(ShortURLBatchResponse);
  rpc GetOriginalURL(OriginalURLRequest) returns(OriginalURLResponse);
  rpc GetUserURLs(UserURLsRequest) returns(UserURLsResponse);
  rpc DeleteURLs(DeleteURLsRequest) returns(DeleteURLsResponse);
}

message ShortURLRequest {
  string url = 1;
  string user_id = 2;
}

message ShortURLResponse {
  string short_url = 1;
}

message PingRequest {}

message PingResponse {
  string result = 1;
}

message OriginalURLRequest {
  string short = 1;
}
message OriginalURLResponse {
  string original = 1;
}

message BatchRequest {
  string correlation_id = 1;
  string original_url = 2;
}

message BatchResponse {
  string correlation_id = 1;
  string result_url = 2;
}

message ShortURLBatchRequest {
  repeated BatchRequest urls = 1;
  string user_id = 2;
}

message ShortURLBatchResponse {
  repeated BatchResponse urls = 1;
}

message UserURLsRequest {
  string user_id = 1;
}

message URLsResponse {
  string short = 1;
  string original = 2;
}

message UserURLsResponse {
  repeated URLsResponse urls = 1;
}

message DeleteURLsRequest {
  repeated string shorts = 1;
  string user_id = 2;
}

message DeleteURLsResponse {
  string result = 1;
}



